<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.checkinrw.android.UserProfile">


    <item
        android:icon="@drawable/outline_save_24"
        android:iconTint="@color/colorWhite"
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/outline_print_24"
        android:iconTint="@color/colorWhite"
        android:id="@+id/action_print"
        android:orderInCategory="100"
        android:title="@string/action_print"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/ic_share_blue_24dp"
        android:iconTint="@color/colorWhite"
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />

</menu>
