<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_8"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="@dimen/padding_8"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/celodollar"
            android:id="@+id/imageView"
            android:scaleType="centerCrop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/content_description" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:padding="@dimen/padding_10"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/cardView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/received_money"
            android:layout_marginBottom="3dp"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:textColor="@color/black"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:text="@string/_0xd0fcf6912e09015324dd0899c1efaaba6a9f43ea"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:textColor="@color/feminineEight"
            android:fontFamily="@font/open_sans_regular"
            android:id="@+id/subTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>

    </LinearLayout>


</RelativeLayout >