<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/app_name"
            android:layout_gravity="start|center_vertical"
            app:srcCompat="@drawable/ic_close_blue_24dp"
            android:id="@+id/closeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorWhite" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_done_gr"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                app:tint="@color/colorWhite" />

            <TextView
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/the_money_was_sent_successfully"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="23sp" />


            <TextView
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_50"
                android:fontFamily="@font/open_sans_semibold"
                android:textColor="@color/colorWhite"
                android:textAlignment="center"
                android:textSize="18sp"
                android:paddingBottom="@dimen/dimen_15"
                android:paddingTop="@dimen/dimen_15"
                android:background="@drawable/trans_background_button"
                android:text="@string/confirm"
                android:layout_width="@dimen/dimen_200"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>